# scintillator-sim

./: .gitignore  1gamma.mac  AGENTS.md  CMakeLists.txt  OpNovice2.cc  OpNovice2.in  Ovsiannikova_Bsc.txt  README.md  default.mac
data/incidence_angle_study/runs/cebr3_51x51x10mm_refl5_1000keV_50deg_1000ph/: RUN_REPORT.md
data/incidence_angle_study/runs/cebr3_51x51x10mm_refl5_662keV_1000ph/: RUN_REPORT.md
data/spatial_angle_study/runs/cebr3_51x51x10mm_refl5_1000keV_spatial6_1000ph/: RUN_REPORT.md
data/spatial_angle_study/runs/cebr3_51x51x10mm_refl5_200keV_spatial6_1000ph/: RUN_REPORT.md
data/spatial_angle_study/runs/cebr3_51x51x10mm_refl5_662keV_spatial6_1000ph/: RUN_REPORT.md
docs/: MEASUREMENT_VALUES_REFERENCE.md  RUNTIME_BENCHMARK_DEPENDENCE.md  SETUP_LINUX_GEANT4_LATEST.md  SETUP_WSL_GEANT4_10_7_2.md
include/: EventAction.hh  HistoManager.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  Run.hh
scripts/: build_app.sh  build_heatmap_interpolator_index.py  check_incidence_angle_outputs.py  check_spatial_angle_outputs.py  generate_actual_480_report.py  generate_heatmap_csv.py  plot_fig310.py  plot_fig36_absorption.py  plot_fig36_lightoutput_from_logs.py  plot_fig36_photopeak_efficiency.py  plot_incidence_angle_distribution.py  plot_incidence_angle_lowres_heatmaps.py  plot_incidence_angle_lowres_y0_slice.py  plot_incidence_angle_x_projection.py  plot_spatial_angle_distribution.py  run_batch.sh  run_fig310.sh  run_fig36_photopeak.sh  run_fig36_repro.sh  run_heatmap_interpolator_ui.py  run_incidence_angle_study.sh  run_runtime_benchmark.sh  run_spatial_angle_study.sh  run_ui_local.sh  setup_wsl_geant4.sh
scripts/macros/: 662keV_0deg_optical_event_types.mac  angle_30deg.mac  angle_45deg.mac  angle_60deg.mac  angle_widebeam_30deg.mac  angle_widebeam_45deg.mac  angle_widebeam_60deg.mac
scripts/macros/actual/: diameter_0.25mm_angle_30deg.mac  diameter_0.25mm_angle_45deg.mac  diameter_0.25mm_angle_60deg.mac  diameter_0.5mm_angle_30deg.mac  diameter_0.5mm_angle_45deg.mac  diameter_0.5mm_angle_60deg.mac
scripts/macros/benchmark/: README.md  energy_1000keV.mac  energy_100keV.mac  energy_20keV.mac  energy_500keV.mac  outputs_all.mac  outputs_minimal.mac  particles_100.mac  particles_200.mac  particles_50.mac  particles_500.mac  size_large.mac  size_medium.mac  size_small.mac
scripts/macros/fig310/: fig310_base.mac
scripts/macros/fig36/: README.md  fig36_common_base.mac  fig36_photopeak_base.mac  test_photopeak.mac
scripts/macros/fig36/generated_photopeak/: bare_1000keV.mac  bare_100keV.mac  bare_200keV.mac  bare_20keV.mac  bare_4000keV.mac  bare_500keV.mac  bare_50keV.mac  reflA_1000keV.mac  reflA_100keV.mac  reflA_200keV.mac  (+4 more)
src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  HistoManager.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  Run.cc  RunAction.cc  SteppingAction.cc
tools/heatmap_interpolator/: README.md
tools/heatmap_interpolator/static/: index.html
